--- a/src/main/resources/templates/squirrel-list.html
+++ b/src/main/resources/templates/squirrel-list.html
@@ -9,7 +9,7 @@
     <h3 th:text="${sq.commonName}">COMMON NAME</h3>
     <p class="species" th:text="${sq.species}">SPECIES</p>
     <p class="habitat" th:text="${sq.habitat}">HABITAT</p>
-    <img th:src="@{/img/sm/{file}(file=${sq.imageFileName})}" th:alt="${sq.commonName}">
+    <img th:src="@{/img/sm/__${sq.imageFileName}__}" th:alt="${sq.commonName}">
     <br/>
     <button th:onclick="|document.location='@{/report(id=${sq.id})}'|">I Saw It!</button>
     <br/>
