--- a/src/main/resources/templates/sightings.html
+++ b/src/main/resources/templates/sightings.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
-<head th:replace="frags :: head"></head>
+<head th:replace="~{frags :: head('View Sightings')}"></head>
 <body>
-<header th:replace="frags :: logo"></header>
-<div th:insert="frags :: sightings"></div>
+<header th:replace="~{frags :: logo}"></header>
+<div th:insert="~{frags :: sightings}"></div>
 </body>
 </html>
