--- a/src/main/resources/templates/confirmation.html
+++ b/src/main/resources/templates/confirmation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
-<head th:replace="frags :: head"></head>
+<head th:replace="~{frags :: head('Sighting Submitted')}"></head>
 <body>
-<header th:replace="frags :: logo"></header>
+<header th:replace="~{frags :: logo}"></header>
 
 <h3>Thank you for reporting!</h3>
 
