--- a/src/main/resources/templates/frags.html
+++ b/src/main/resources/templates/frags.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
-<head th:fragment="head">
+<head th:fragment="head(pageTitle)">
     <meta charset="UTF-8">
     <title th:text="${pageTitle}">TITLE</title>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto&display=swap" rel="stylesheet">
