--- a/src/main/resources/templates/confirmation.html
+++ b/src/main/resources/templates/confirmation.html
@@ -6,6 +6,6 @@
 
 <h3>Thank you for reporting!</h3>
 
-<div th:insert="frags :: sightings"></div>
+<div th:insert="~{frags :: sightings}"></div>
 </body>
 </html>
