Moved frags to subfolder, fixed urls for frags, and fixed namespace urls

--- a/src/main/resources/templates/credits.html
+++ b/src/main/resources/templates/credits.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
-<head th:replace="~{frags :: head('Site Credits')}"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/frags :: head('Site Credits')}"></head>
 <body>
-<header th:replace="~{frags :: logo}"></header>
+<header th:replace="~{fragments/frags :: logo}"></header>
 
 <div id="credits">
 <a href="https://www.earthtouchnews.com/cute-and-cool/cute-and-cool/six-cool-squirrel-species-because-its-squirrel-appreciation-day/">Six Cool Squirrel Species</a>
