--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
-<head th:replace="~{frags :: head('24/7 Squirrel Watch')}"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/frags :: head('24/7 Squirrel Watch')}"></head>
 <body>
-<header th:replace="~{frags :: logo}"></header>
+<header th:replace="~{fragments/frags :: logo}"></header>
 <h3><a th:href="@{/list}">Squirrel Sighting Database</a></h3>
 <footer>
     <a th:href="@{/credits}">Credits</a>
