--- a/src/main/resources/templates/confirmation.html
+++ b/src/main/resources/templates/confirmation.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
-<head th:replace="~{frags :: head('Sighting Submitted')}"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/frags :: head('Sighting Submitted')}"></head>
 <body>
-<header th:replace="~{frags :: logo}"></header>
+<header th:replace="~{fragments/frags :: logo}"></header>
 
 <h3>Thank you for reporting!</h3>
 
-<div th:insert="~{frags :: sightings}"></div>
+<div th:insert="~{fragments/frags :: sightings}"></div>
 </body>
 </html>
