--- a/src/main/resources/templates/sighting-form.html
+++ b/src/main/resources/templates/sighting-form.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
-<head th:replace="~{frags :: head('Report a Sighting')}"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/frags :: head('Report a Sighting')}"></head>
 <body>
-<header th:replace="~{frags :: logo}"></header>
+<header th:replace="~{fragments/frags :: logo}"></header>
 
 <div class="form">
     <img th:src="@{/img/__${squirrel.imageFileName}__}" th:alt="${squirrel.commonName}">
